[gd_scene load_steps=10 format=2]

[ext_resource path="res://tilemap_packed.png" type="Texture" id=1]
[ext_resource path="res://Grub.gd" type="Script" id=2]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://WanderController.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 80, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 96, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 3.2739
height = 0.452618

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.14165
height = 0.453

[node name="Grub" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4.46 )
shape = SubResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 4.46 )
shape = SubResource( 8 )

[node name="WanderController" parent="." instance=ExtResource( 4 )]
horizontal_only = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.0469172, 4.50421 )
scale = Vector2( 0.326714, 0.326714 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Hurtbox"]
